today I have learnt htmlCollections and nodeLists

--- a/dayO7/selectors.html
+++ b/dayO7/selectors.html
@@ -13,7 +13,8 @@
     <li class="item">item-4</li>
     <li class="item">item-3</li>
 </ul>
-<p></p>
+<p id="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt reprehenderit magnam nemo ullam a neque id sit? Repellendus nam adipisci aliquid omnis obcaecati doloribus dolorem modi non, officiis ab. Doloremque!</p>
+<button id="Submit">Submit</button>
     <script src="dom.js"></script>
 </body>
 </html>
